--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,17 +2,18 @@
 {% load static %}
 
 {% block content %}
-<section class="py-5 text-center container">
-    <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Album example</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-        <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-        </p>
+
+<section class="text-secondary px-4 py-5 text-center hero">
+  <div class="py-5">
+    <h1 class="display-5 fw-bold text-white">Our Neighbourhood: <div>Drimnagh</div></h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="fs-5 mb-4">Enabling communities to share and promote local events, activities and businesses.</p>
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <button type="button" class="btn btn-green btn-lg px-4 me-sm-3 fw-bold">Sign up</button>
+        <button type="button" class="btn btn-outline-light btn-lg px-4">Log in</button>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 {% endblock %}
