--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,4 +1,25 @@
-html {
-  background-color: #1b1b1b;
-  color: white;
+@import "variables";
+@import "index";
+@import "navbar";
+
+//
+// General Styling
+//
+* {
+  margin: 0;
+}
+
+body,
+footer {
+  font-family: $paragraph;
+}
+
+//Buttons
+.btn-green {
+  border-color: $sec-colour;
+  color: $sec-colour;
+
+  &:hover {
+    background-color: $sec-colour;
+  }
 }
