--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -14,6 +14,11 @@ footer {
   font-family: $paragraph;
 }
 
+//Heading
+.page-header {
+  margin: 3rem 0;
+}
+
 //Buttons
 .btn-green {
   border-color: $sec-colour;
