--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,18 +2,30 @@
 {% load static %}
 
 {% block content %}
+<main>
+    <!--  Hero  -->
+    <section class="text-secondary px-4 py-5 text-center hero">
+        <div class="py-5">
+            <h1 class="display-5 fw-bold text-white">Our Neighbourhood:
+                <div>Drimnagh</div>
+            </h1>
+            <div class="col-lg-6 mx-auto">
+                <p class="fs-5 mb-4">Enabling communities to share and promote local events, activities, services and
+                    businesses.</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                    <button type="button" class="btn btn-green btn-lg px-4 me-sm-3 fw-bold">Sign up</button>
+                    <button type="button" class="btn btn-outline-light btn-lg px-4">Log in</button>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<section class="text-secondary px-4 py-5 text-center hero">
-  <div class="py-5">
-    <h1 class="display-5 fw-bold text-white">Our Neighbourhood: <div>Drimnagh</div></h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="fs-5 mb-4">Enabling communities to share and promote local events, activities and businesses.</p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-green btn-lg px-4 me-sm-3 fw-bold">Sign up</button>
-        <button type="button" class="btn btn-outline-light btn-lg px-4">Log in</button>
-      </div>
-    </div>
-  </div>
-</section>
+    <!--  Local events  -->
+    <section>
+        {% include 'includes/events.html' %}
+    </section>
+
+</main>
+
 
 {% endblock %}
