--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,11 @@
 }
 
 .list-unstyled a {
-  color: #5710b2;
+  color: black;
+  text-decoration: none;
+}
+.list-unstyled a:hover {
+  text-decoration: underline;
 }
 
 * {
@@ -18,6 +22,10 @@
 body,
 footer {
   font-family: "Poppins", sans-serif;
+}
+
+.page-header {
+  margin: 3rem 0;
 }
 
 .btn-green {
