--- a/templates/base.html
+++ b/templates/base.html
@@ -5,33 +5,33 @@
 <html lang="en">
 <head>
 
-  {% block meta %}
+    {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% endblock %}
+    {% endblock %}
 
-  {% block extra_meta %}
-  {% endblock %}
+    {% block extra_meta %}
+    {% endblock %}
 
-  {% block corecss %}
+    {% block corecss %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  {% endblock %}
+    {% endblock %}
 
-  {% block extra_css %}
-  {% endblock %}
+    {% block extra_css %}
+    {% endblock %}
 
-  {% block core_js %}
+    {% block core_js %}
     <script src="https://kit.fontawesome.com/dcc5b6296f.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
             crossorigin="anonymous"></script>
-  {% endblock %}
+    {% endblock %}
 
-  {% block extra_js %}
-  {% endblock %}
+    {% block extra_js %}
+    {% endblock %}
 
     <title>Our Neighbourhood {% block extra_title %}{% endblock %}</title>
 
@@ -39,52 +39,55 @@
 
 <body>
 
-    <header>
-      <div class="collapse bg-light" id="navbarHeader">
+<header>
+    <div class="collapse bg-light" id="navbarHeader">
         <div class="container">
-          <div class="row">
-            <div class="col-sm-8 col-md-7 py-4">
-              <h4 class="text-black">About</h4>
-              <p class="text-muted">Wonder which services are available in your neighbourhood? Our neighbourhood is a service that enables communities to share and promote local events, activities, services and businesses.</p>
+            <div class="row">
+                <div class="col-sm-8 col-md-7 py-4">
+                    <h4 class="text-black">About</h4>
+                    <p class="text-muted">Wonder which services are available in your neighbourhood? Our neighbourhood
+                        is a service that enables communities to share and promote local events, activities, services
+                        and businesses.</p>
+                </div>
+                <div class="col-sm-4 offset-md-1 py-4">
+                    <h4 class="text-black">Navigation</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-black">Log In</a></li>
+                        <li><a href="#" class="text-black">Register</a></li>
+                        <li><a href="#" class="text-black">How it works?</a></li>
+                        <li><a href="#" class="text-black">Services Board</a></li>
+                        <li><a href="#" class="text-black">FAQ</a></li>
+                        <li><a href="#" class="text-black">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-sm-4 offset-md-1 py-4">
-              <h4 class="text-black">Navigation</h4>
-              <ul class="list-unstyled">
-                <li><a href="#" class="text-black">Log In</a></li>
-                <li><a href="#" class="text-black">Register</a></li>
-                <li><a href="#" class="text-black">How it works?</a></li>
-                <li><a href="#" class="text-black">Services Board</a></li>
-                <li><a href="#" class="text-black">FAQ</a></li>
-                <li><a href="#" class="text-black">Contact</a></li>
-              </ul>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="navbar navbar-light bg-light shadow-sm">
+    </div>
+    <div class="navbar navbar-light bg-light shadow-sm">
         <div class="container">
-          <a href="#" class="navbar-brand d-flex align-items-center">
-            <i class="fas fa-map-marked-alt"></i><strong>Our Neighbourhood</strong>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <a href="#" class="navbar-brand d-flex align-items-center">
+                <i class="fas fa-map-marked-alt"></i><strong>Our Neighbourhood</strong>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
+                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
-      </div>
-    </header>
+    </div>
+</header>
 
-  {% if messages %}
-    <div class="message-container"></div>
-  {% endif %}
+{% if messages %}
+<div class="message-container"></div>
+{% endif %}
 
-  {% block page_header %}
-  {% endblock %}
+{% block page_header %}
+{% endblock %}
 
-  {% block content %}
-  {% endblock %}
+{% block content %}
+{% endblock %}
 
-  {% block postload_js %}
-  {% endblock %}
+{% block postload_js %}
+{% endblock %}
 
 </body>
 </html>
