Create profile app

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,8 +2,10 @@
 {% load static %}
 
 {% block content %}
+
+<!-- Main content -->
 <main>
-    <!--  Hero  -->
+    <!-- Hero -->
     <section class="text-secondary px-4 py-5 text-center hero">
         <div class="py-5">
             <h1 class="display-5 fw-bold text-white">Our Neighbourhood:
