--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,9 @@
 
 <body>
 
+<!-- Header -->
 <header>
+    <!-- Nav -->
     <div class="collapse bg-light" id="navbarHeader">
         <div class="container">
             <div class="row">
