--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -10,7 +10,7 @@ $normal-text-size: 1.6rem;
 //Colours
 $prim-colour: #5710b2;
 $sec-colour: #20D489;
-$gray: #a1a5b7;
+$gray: #6c757d;
 
 // Mixins
 @mixin flexbox($display, $align, $justify) {
