--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,6 @@
 
 <html lang="en">
 <head>
-
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
@@ -34,62 +33,37 @@
     {% endblock %}
 
     <title>Our Neighbourhood {% block extra_title %}{% endblock %}</title>
-
 </head>
 
 <body>
 
-<!-- Header -->
-<header>
-    <!-- Nav -->
-    <div class="collapse bg-light" id="navbarHeader">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
-                    <h4 class="text-black">About</h4>
-                    <p class="text-muted">Wonder which services are available in your neighbourhood? Our neighbourhood
-                        is a service that enables communities to share and promote local events, activities, services
-                        and businesses.</p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                    <h4 class="text-black">Navigation</h4>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-black">Log In</a></li>
-                        <li><a href="#" class="text-black">Register</a></li>
-                        <li><a href="#" class="text-black">How it works?</a></li>
-                        <li><a href="#" class="text-black">Services Board</a></li>
-                        <li><a href="#" class="text-black">FAQ</a></li>
-                        <li><a href="#" class="text-black">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="navbar navbar-light bg-light shadow-sm">
-        <div class="container">
-            <a href="#" class="navbar-brand d-flex align-items-center">
-                <i class="fas fa-map-marked-alt"></i><strong>Our Neighbourhood</strong>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
-                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </div>
-</header>
+    <!-- Header -->
+    <header>
+        {% include './nav.html' %}
+    </header>
 
-{% if messages %}
-<div class="message-container"></div>
-{% endif %}
+    <!-- Messages -->
+    {% if messages %}
+    <div class="message-container"></div>
+    {% endif %}
 
-{% block page_header %}
-{% endblock %}
+    {% block page_header %}
+    {% endblock %}
 
-{% block content %}
-{% endblock %}
+    <!-- Main content -->
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 
-{% block postload_js %}
-{% endblock %}
+    <!-- Footer -->
+    <footer>
+        {% include './footer.html' %}
+    </footer>
+
+    <!-- Scripts -->
+    {% block postload_js %}
+    {% endblock %}
 
 </body>
 </html>
