--- a/templates/nav.html
+++ b/templates/nav.html
@@ -15,13 +15,13 @@
                             {% if request.user.is_superuser %}
                                 <li><a href="#" class="text-black">Event Management</a></li>
                             {% endif %}
-                                <li><a href="#" class="text-black">My Profile</a></li>
+                                <li><a href="{% url 'profile' %}" class="text-black">My Profile</a></li>
                                 <li><a href="#" class="text-black">Local Events</a></li>
                                 <li><a href="#" class="text-black">FAQ</a></li>
-                                <li><a href="#" class="text-black">Log Out</a></li>
+                                <li><a href="{% url 'account_logout' %}" class="text-black">Log Out</a></li>
                         {% else %}
-                            <li><a href="#" class="text-black">Log In</a></li>
-                            <li><a href="#" class="text-black">Register</a></li>
+                            <li><a href="{% url 'account_login' %}" class="text-black">Log In</a></li>
+                            <li><a href="{% url 'account_signup' %}" class="text-black">Sign up</a></li>
                             <li><a href="#" class="text-black">Local Events</a></li>
                             <li><a href="#" class="text-black">FAQ</a></li>
                         {% endif %}
