Install crispy forms and add log in content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,6 +63,12 @@
   transition: none;
 }
 
+#authentication {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 * {
   margin: 0;
 }
