--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-                    {% block inner_content %}
-                    {% endblock %}
+    <div id="authentication" class="container allauth-inner-content">
+        {% block inner_content %}
+        {% endblock %}
+    </div>
 {% endblock %}
