--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,66 +7,66 @@
 
 {% block inner_content %}
 
-<div id="authentication" class="container">
-        <div class="row pb-0 pe-lg-0 pt-lg-5 align-items-center">
+<div class="row pb-0 pe-lg-0 pt-lg-5 align-items-center">
 
-            <!-- Left side -->
-            <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 bg-primary">
+    <!-- Left panel -->
+    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 bg-primary">
 
-                <!-- Content top-->
-                <div class="d-flex pt-lg-40 pt-15 text-center">
-                    <h3 class="fw-bolder fs-2x text-white lh-lg">Discover your local events, activites, services and business</h3>
-                </div>
-
-                <!-- Image bottom -->
-
-            </div>
-
-            <!-- Right side -->
-            <div class="col-lg-5 position-relative overflow-hidden ps-4 pe-4">
-
-                <h2 class="text-center page-header">{% trans "Sign In" %}</h2>
-
-                <div class="mx-auto">
-                    {% get_providers as socialaccount_providers %}
-
-                    {% if socialaccount_providers %}
-                    <p>{% blocktrans with site.name as site_name %}Please sign in with one
-                        of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-                        for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-                    <div class="socialaccount_ballot">
-                        <ul class="socialaccount_providers">
-                            {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-                        </ul>
-
-                        <div class="login-or">{% trans 'or' %}</div>
-                    </div>
-
-                    {% include "socialaccount/snippets/login_extra.html" %}
-
-                    {% else %}
-                    <p class="text-muted fw-bold">{% blocktrans %}New here?
-                        <a class="text-green-custom fw-bolder" href="{{ signup_url }}">Create an account</a>.{% endblocktrans %}
-                    </p>
-                    {% endif %}
-
-                    <form class="login" method="POST" action="{% url 'account_login' %}">
-                        {% csrf_token %}
-                        {{ form|crispy }}
-                        {% if redirect_field_value %}
-                        <p><input class="form-control" type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/></p>
-                        {% endif %}
-                        <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-                        <p class="mt-2">
-                            <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-                        </p>
-                    </form>
-                </div>
-
-
-            </div>
+        <!-- Content top-->
+        <div class="d-flex pt-lg-40 pt-15 text-center">
+            <h3 class="fw-bolder fs-2x text-white lh-lg">Discover your local events, activites, services and
+                business</h3>
         </div>
+
+        <!-- Image bottom -->
+    </div>
+
+    <!-- Right panel -->
+    <div class="col-lg-5 position-relative overflow-hidden ps-4 pe-4 d-flex">
+        <div class="mx-auto">
+            <h2 class="text-center page-header">{% trans "Sign In" %}</h2>
+
+            {% get_providers as socialaccount_providers %}
+
+            {% if socialaccount_providers %}
+            <p>{% blocktrans with site.name as site_name %}Please sign in with one
+                of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+                for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+
+            <div class="socialaccount_ballot">
+                <ul class="socialaccount_providers">
+                    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+                </ul>
+
+                <div class="login-or">{% trans 'or' %}</div>
+            </div>
+
+            {% include "socialaccount/snippets/login_extra.html" %}
+
+            {% else %}
+            <p class="text-muted fw-bold authentication-link">{% blocktrans %}New here?
+                <a class="fw-bolder" href="{{ signup_url }}">Create an account</a>{% endblocktrans %}
+            </p>
+            {% endif %}
+
+            <form class="login" method="POST" action="{% url 'account_login' %}">
+                {% csrf_token %}
+                {{ form|crispy }}
+                {% if redirect_field_value %}
+                <p><input class="form-control" type="hidden" name="{{ redirect_field_name }}"
+                          value="{{ redirect_field_value }}"/></p>
+                {% endif %}
+                <div class="primaryAction-wrapper">
+                    <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+                </div>
+                <p class="mt-2">
+                    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                </p>
+            </form>
+        </div>
+
+
+    </div>
 </div>
 
 {% endblock %}
