--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<div class="footer py-4 d-flex flex-lg-column">
+<div class="footer d-flex flex-lg-column">
     <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between">
         <div class="order-2 order-md-1" id="footer-brand">
             <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
