--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,17 +6,18 @@
 
 {% block inner_content %}
 
-<div class="row pb-0 pe-lg-0 pt-lg-5 align-items-center">
+<div class="row pb-0 pe-lg-0 align-items-center">
     <!-- Left panel -->
-    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 bg-primary">
+    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 auth-left-panel">
 
         <!-- Content top-->
         <div class="d-flex pt-lg-40 pt-15 text-center">
-            <h3 class="fw-bolder fs-2x text-white lh-lg">Discover your local events, activites, services and
+            <h3 class="fw-bolder fs-2x text-white lh-lg p-5">Discover your local events, activites, services and
                 business</h3>
         </div>
 
         <!-- Image bottom -->
+        <div class="auth-left-panel__img"></div>
     </div>
 
     <!-- Right panel -->
