--- a/static/css/_authentication.scss
+++ b/static/css/_authentication.scss
@@ -1,7 +1,21 @@
 #authentication {
-  height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.auth-left-panel {
+    background-color: $sec-colour;
+    height: 100%;
+
+  &__img {
+    background: url('/media/bg-auth.png') no-repeat center center;
+    background-size: contain;
+    min-height: 21rem;
+
+    @include bp(tablet) {
+      min-height: 35rem;
+    }
+  }
 }
 
 .authentication-link {
