--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div id="authentication" class="container allauth-inner-content">
+    <div id="authentication" class="container-fluid allauth-inner-content">
         {% block inner_content %}
         {% endblock %}
     </div>
