Add signals to profile model

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -10,6 +10,7 @@
         <div class="row">
             <div class="col">
                 <p>Content Profile</p>
+                <p>{{ profile }}</p>
             </div>
         </div>
 {% endblock %}
