--- a/static/css/_authentication.scss
+++ b/static/css/_authentication.scss
@@ -18,6 +18,11 @@
   }
 }
 
+.help-block {
+  color: $prim-colour;
+  font-weight: 300;
+}
+
 .authentication-link {
   a {
     color: $sec-colour;
