--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,17 +5,24 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block inner_content %}
-<h2 class="text-center page-header">{% trans "Sign Out" %}</h2>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<div class="row pb-0 pe-lg-0">
+    <div class="col-12">
+        <h2 class="text-center page-header">{% trans "Sign Out" %}</h2>
+    </div>
+    <div class="col-12 allauth-inner-content__align-center">
+        <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
+        <form method="post" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+            {% endif %}
+            <button type="submit">{% trans 'Sign Out' %}</button>
+        </form>
+        <a href="{% url 'home' %}" class="btn btn-outline-sec-colour btn-sm px-4">Cancel</a>
+    </div>
+</div>
 
 
 {% endblock %}
