--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -61,7 +61,7 @@
                     <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
                 </div>
                 <p class="mt-2">
-                    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                    <a class="button secondaryAction forgot-password-link" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
                 </p>
             </form>
         </div>
