--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,12 +5,21 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h2 class="text-center page-header">{% trans "Change Password" %}</h2>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    </form>
+<div class="row pb-0 pe-lg-0">
+    <div class="col-12">
+        <h2 class="text-center page-header">{% trans "Change Password" %}</h2>
+    </div>
+    <div class="col-12 allauth-inner-content__align-center">
+        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" name="action">{% trans "Change Password" %}</button>
+            <a href="{% url 'account_reset_password' %}" class="forgot-password-link">{% trans "Forgot Password?" %}</a>
+        </form>
+    </div>
+</div>
+
+
+
 {% endblock %}
