--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,20 +4,27 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h2 class="text-center page-header">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        {% if form %}
-            <form method="POST" action="{{ action_url }}">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
-            </form>
+<div class="row pb-0 pe-lg-0">
+    <div class="col-12">
+        <h2 class="text-center page-header">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+    </div>
+    <div class="col-12 allauth-inner-content__align-center">
+        {% if token_fail %}
+            {% url 'account_reset_password' as passwd_reset_url %}
+            <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
         {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
+            {% if form %}
+                <form method="POST" action="{{ action_url }}">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                </form>
+            {% else %}
+                <p>{% trans 'Your password is now changed.' %}</p>
+            {% endif %}
         {% endif %}
-    {% endif %}
+    </div>
+</div>
+
 {% endblock %}
