--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,6 +4,14 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h2 class="text-center page-header">{% trans "Change Password" %}</h2>
-    <p>{% trans 'Your password is now changed.' %}</p>
+
+<div class="row pb-0 pe-lg-0">
+    <div class="col-12">
+        <h2 class="text-center page-header">{% trans "Change Password" %}</h2>
+    </div>
+    <div class="col-12 allauth-inner-content__align-center">
+        <p>{% trans 'Your password is now changed.' %}</p>
+    </div>
+</div>
+
 {% endblock %}
