--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -5,7 +5,14 @@
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block inner_content %}
-<h2 class="text-center page-header">{% trans "Sign Up Closed" %}</h2>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+<div class="row pb-0 pe-lg-0">
+    <div class="col-12">
+        <h2 class="text-center page-header">{% trans "Sign Up Closed" %}</h2>
+    </div>
+    <div class="col-12 allauth-inner-content__align-center">
+        <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+    </div>
+</div>
+
 {% endblock %}
