--- a/profiles/templates/profiles/profile-posts.html
+++ b/profiles/templates/profiles/profile-posts.html
@@ -1,1 +1,22 @@
-<p>{{ profile }} posts</p>
+<div class="row">
+    <div class="col-xl-4">
+        <div class="card card-stretch bg-danger mb-5 mb-xxl-8">
+            <div class="card-body">
+                <div class="d-flex align-items-center">
+                    <div class="symbol symbol-50px me-5">
+                        <span class="symbol-label bg-white bg-opacity-10">
+                    </span>
+                    </div>
+                    <div>
+                        <a href="#" class="fs-4 text-white text-hover-primary fw-bolder">Yoga classes in the park</a>
+                        <div class="fs-7 text-white opacity-75 fw-bold mt-1">Sunday, 10am</div>
+                    </div>
+                </div>
+                <div class="fw-bolder text-white pt-7">
+                    <span class="d-block">Details X</span>
+                    <span class="d-block pt-2">Details Y</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
