--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2,8 +2,9 @@
 @import "index";
 @import "navbar";
 @import "footer";
-@import "authentication";
+@import "form";
 @import "profile";
+@import "authentication";
 
 //
 // General Styling
