Style form profile and buttons

--- a/static/css/_form.scss
+++ b/static/css/_form.scss
@@ -87,4 +87,14 @@
     }
   }
 
+  .deactivate-account {
+    text-decoration: none;
+    color: #6c757d; /* texted-muted class */
+    font-size: .9rem;
+
+    &:hover {
+      color: $prim-colour;
+    }
+  }
+
 }
