--- a/profiles/templates/profiles/profile-details.html
+++ b/profiles/templates/profiles/profile-details.html
@@ -1,11 +1,13 @@
 <div class="row mt-4">
-    <div class="col-5">
+    <div class="col-md-5 position-relative overflow-hidden ps-4 pe-4 d-flex">
         <p>image</p>
     </div>
-    <div class="col-7 form-custom">
+    <div class="col-md-7 p-3 p-lg-5 pt-lg-3 form-custom">
         <form action="{% url 'profile' %}" method="POST">
             {% csrf_token %}
             {{ form|crispy }}
+            <button>Update profile</button>
         </form>
+        <p><a href="" class="fw-bolder deactivate-account">Deactive account?</a></p>
     </div>
 </div>
