--- a/profiles/templates/profiles/profile-details.html
+++ b/profiles/templates/profiles/profile-details.html
@@ -1,8 +1,8 @@
-<div class="row mt-4">
-    <div class="col-md-5 position-relative overflow-hidden ps-4 pe-4 d-flex">
+<div class="row">
+    <div class="col-md-5 p-3 pt-5 p-lg-5 pt-lg-3 my-profile__image">
         <p>image</p>
     </div>
-    <div class="col-md-7 p-3 p-lg-5 pt-lg-3 form-custom">
+    <div class="col-md-7 p-3 p-lg-5 pt-lg-3 form-custom my-profile__form">
         <form action="{% url 'profile' %}" method="POST">
             {% csrf_token %}
             {{ form|crispy }}
