--- a/static/css/_profile.scss
+++ b/static/css/_profile.scss
@@ -1,11 +1,26 @@
 .my-profile {
+  border: .1rem solid rgba($gray, .3);
+
   &__link {
     text-decoration: none;
 
     &:hover {
       color: $sec-colour;
     }
+  }
 
+  &__form {
+    border-bottom: .1rem solid rgba($gray, .3);
+    border-right: .1rem solid rgba($gray, .3);
+    border-top: 0;
+    border-left: 0;
+  }
+
+  &__image {
+    border-bottom: .1rem solid rgba($gray, .3);
+    border-right: .1rem solid rgba($gray, .3);
+    border-left: .1rem solid rgba($gray, .3);
+    border-top: 0;
   }
 }
 
