Refactor style page header on profile and allauth templates

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block page_header %}
-<h2 class="text-center page-header">My Profile</h2>
+<h2 class="text-center page-header-bg">My Profile</h2>
 {% endblock %}
 
 {% block content %}
