--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -7,11 +7,11 @@
 
 {% block inner_content %}
 
-<div class="row pb-0 pe-lg-0">
-    <div class="col-12">
-        <h2 class="text-center page-header">{% trans "Password Reset" %}</h2>
-    </div>
-    <div class="col-12 allauth-inner-content__align-center">
+<h2 class="text-center page-header-bg">{% trans "Password Reset" %}</h2>
+
+<div id="authentication" class="container-fluid form-custom">
+    <div class="row pb-0 pe-lg-0">
+        <div class="col-12 form-custom__align-center">
             {% if user.is_authenticated %}
             {% include "account/snippets/already_logged_in.html" %}
             {% endif %}
@@ -21,13 +21,12 @@
             <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <input type="submit" value="{% trans 'Reset My Password' %}" />
+                <input type="submit" value="{% trans 'Reset My Password' %}"/>
             </form>
 
             <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        </div>
     </div>
 </div>
-
-
 
 {% endblock %}
