--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -6,19 +6,18 @@
 
 {% block inner_content %}
 
-<div class="row pb-0 pe-lg-0">
-    <div class="col-12">
-        <h2 class="text-center page-header">{% trans "Set Password" %}</h2>
-    </div>
-    <div class="col-12 allauth-inner-content__align-center">
-        <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-        </form>
+<h2 class="text-center page-header-bg">{% trans "Set Password" %}</h2>
+
+<div id="authentication" class="container-fluid form-custom">
+    <div class="row pb-0 pe-lg-0">
+        <div class="col-12 form-custom__align-center">
+            <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+            </form>
+        </div>
     </div>
 </div>
-
-
 
 {% endblock %}
