--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -6,12 +6,13 @@
 
 {% block inner_content %}
 
-<div class="row pb-0 pe-lg-0">
-    <div class="col-12">
-        <h2 class="text-center page-header">{% trans "Sign Up Closed" %}</h2>
-    </div>
-    <div class="col-12 allauth-inner-content__align-center">
-        <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+<h2 class="text-center page-header-bg">{% trans "Sign Up Closed" %}</h2>
+
+<div id="authentication" class="container-fluid form-custom">
+    <div class="row pb-0 pe-lg-0">
+        <div class="col-12 form-custom__align-center">
+            <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+        </div>
     </div>
 </div>
 
