--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -6,23 +6,23 @@
 
 {% block inner_content %}
 
-<div class="row pb-0 pe-lg-0">
-    <div class="col-12">
-        <h2 class="text-center page-header">{% trans "Sign Out" %}</h2>
-    </div>
-    <div class="col-12 allauth-inner-content__align-center">
-        <p>{% trans 'Are you sure you want to sign out?' %}</p>
+<h2 class="text-center page-header-bg">{% trans "Sign Out" %}</h2>
 
-        <form method="post" action="{% url 'account_logout' %}">
-            {% csrf_token %}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-            {% endif %}
-            <button type="submit">{% trans 'Sign Out' %}</button>
-        </form>
-        <a href="{% url 'home' %}" class="btn btn-outline-sec-colour btn-sm px-4">Cancel</a>
+<div id="authentication" class="container-fluid form-custom">
+    <div class="row pb-0 pe-lg-0">
+        <div class="col-12 form-custom__align-center">
+            <p>{% trans 'Are you sure you want to sign out?' %}</p>
+
+            <form method="post" action="{% url 'account_logout' %}">
+                {% csrf_token %}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                {% endif %}
+                <button type="submit">{% trans 'Sign Out' %}</button>
+            </form>
+            <a href="{% url 'home' %}" class="btn btn-outline-sec-colour btn-sm px-4">Cancel</a>
+        </div>
     </div>
 </div>
-
 
 {% endblock %}
