--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -6,20 +6,19 @@
 
 {% block inner_content %}
 
-<div class="row pb-0 pe-lg-0">
-    <div class="col-12">
-        <h2 class="text-center page-header">{% trans "Change Password" %}</h2>
-    </div>
-    <div class="col-12 allauth-inner-content__align-center">
-        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit" name="action">{% trans "Change Password" %}</button>
-            <a href="{% url 'account_reset_password' %}" class="forgot-password-link">{% trans "Forgot Password?" %}</a>
-        </form>
+<h2 class="text-center page-header-bg">{% trans "Change Password" %}</h2>
+
+<div id="authentication" class="container-fluid form-custom">
+    <div class="row pb-0 pe-lg-0">
+        <div class="col-12 allauth-inner-content__align-center">
+            <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button type="submit" name="action">{% trans "Change Password" %}</button>
+                <a href="{% url 'account_reset_password' %}" class="forgot-password-link">{% trans "Forgot Password?" %}</a>
+            </form>
+        </div>
     </div>
 </div>
-
-
 
 {% endblock %}
