--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -6,19 +6,18 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
+<h2 class="text-center page-header-bg">{% trans "Password Reset" %}</h2>
 
-<div class="row pb-0 pe-lg-0">
-    <div class="col-12">
-        <h2 class="text-center page-header">{% trans "Password Reset" %}</h2>
-    </div>
-    <div class="col-12 allauth-inner-content__align-center">
-        {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-        {% endif %}
+<div id="authentication" class="container-fluid form-custom">
+    <div class="row pb-0 pe-lg-0">
+        <div class="col-12 form-custom__align-center">
+            {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+            {% endif %}
 
-        <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+            <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+        </div>
     </div>
 </div>
-
 
 {% endblock %}
