--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -5,13 +5,13 @@
 
 {% block inner_content %}
 
-<div class="row pb-0 pe-lg-0">
-    <div class="col-12">
-        <h2 class="text-center page-header">{% trans "Change Password" %}</h2>
-    </div>
-    <div class="col-12 allauth-inner-content__align-center">
-        <p>{% trans 'Your password is now changed.' %}</p>
+<h2 class="text-center page-header-bg">{% trans "Change Password" %}</h2>
+
+<div id="authentication" class="container-fluid form-custom">
+    <div class="row pb-0 pe-lg-0">
+        <div class="col-12 form-custom__align-center">
+            <p>{% trans 'Your password is now changed.' %}</p>
+        </div>
     </div>
 </div>
-
 {% endblock %}
