--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,39 +6,40 @@
 
 {% block inner_content %}
 
-<div class="row pb-0 pe-lg-0 align-items-center">
-    <!-- Left panel -->
-    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 auth-left-panel">
+<div id="authentication" class="container-fluid form-custom">
+    <div class="row pb-0 pe-lg-0 align-items-center">
+        <!-- Left panel -->
+        <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 auth-left-panel">
 
-        <!-- Content top-->
-        <div class="d-flex pt-lg-40 pt-15 text-center">
-            <h3 class="fw-bolder fs-2x text-white lh-lg p-5">Discover your local events, activites, services and
-                business</h3>
+            <!-- Content top-->
+            <div class="d-flex pt-lg-40 pt-15 text-center">
+                <h3 class="fw-bolder fs-2x text-white lh-lg p-5">Discover your local events, activites, services and
+                    business</h3>
+            </div>
+
+            <!-- Image bottom -->
+            <div class="auth-left-panel__img"></div>
         </div>
 
-        <!-- Image bottom -->
-        <div class="auth-left-panel__img"></div>
-    </div>
+        <!-- Right panel -->
+        <div class="col-lg-5 position-relative overflow-hidden ps-4 pe-4 d-flex">
+            <div class="mx-auto">
+                <h2 class="text-center page-header">{% trans "Sign Up" %}</h2>
 
-    <!-- Right panel -->
-    <div class="col-lg-5 position-relative overflow-hidden ps-4 pe-4 d-flex">
-        <div class="mx-auto">
-            <h2 class="text-center page-header">{% trans "Sign Up" %}</h2>
+            <p class="text-muted fw-bold authentication-link">{% blocktrans %}Already have an account? <a
+                    href="{{ login_url }}">Sign in</a>{% endblocktrans %}</p>
 
-        <p class="text-muted fw-bold authentication-link">{% blocktrans %}Already have an account? <a
-                href="{{ login_url }}">Sign in</a>{% endblocktrans %}</p>
-
-        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-            {% csrf_token %}
-            {{ form|crispy }}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-            {% endif %}
-            <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-        </form>
+            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                {% csrf_token %}
+                {{ form|crispy }}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                {% endif %}
+                <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+            </form>
+            </div>
         </div>
     </div>
 </div>
-
 
 {% endblock %}
