--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -6,22 +6,23 @@
 
 {% block inner_content %}
 
-<div class="row pb-0 pe-lg-0">
-    <div class="col-12">
-        <h2 class="text-center page-header">{% trans "Verify Your E-mail Address" %}</h2>
-    </div>
-    <div class="col-12 allauth-inner-content__align-center">
-        {% url 'account_email' as email_url %}
+<h2 class="text-center page-header-bg">{% trans "Verify Your E-mail Address" %}</h2>
 
-        <p>{% blocktrans %}This part of the site requires us to verify that
-        you are who you claim to be. For this purpose, we require that you
-        verify ownership of your e-mail address. {% endblocktrans %}</p>
+<div id="authentication" class="container-fluid form-custom">
+    <div class="row pb-0 pe-lg-0">
+        <div class="col-12 form-custom__align-center">
+            {% url 'account_email' as email_url %}
 
-        <p>{% blocktrans %}We have sent an e-mail to you for
-        verification. Please click on the link inside this e-mail. Please
-        contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+            <p>{% blocktrans %}This part of the site requires us to verify that
+            you are who you claim to be. For this purpose, we require that you
+            verify ownership of your e-mail address. {% endblocktrans %}</p>
 
-        <p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
+            <p>{% blocktrans %}We have sent an e-mail to you for
+            verification. Please click on the link inside this e-mail. Please
+            contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+
+            <p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
+        </div>
     </div>
 </div>
 
