Add link to reset password

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,7 +14,7 @@
         <!-- Anchor links -->
         <div class="col d-flex align-items-center flex-nowrap text-nowrap overflow-auto py-1">
             <a class="btn btn-active-accent fw-bolder ms-3 my-profile__link" href="#js-my-details"
-               id="js-my-details-button">My details</a>
+               id="js-my-details-button">My account</a>
             <a class="btn btn-active-accent fw-bolder ms-3 my-profile__link" href="#js-my-posts"
                id="js-my-posts-button">My posts</a>
         </div>
