--- a/profiles/templates/profiles/profile-details.html
+++ b/profiles/templates/profiles/profile-details.html
@@ -1,13 +1,21 @@
 <div class="row">
-    <div class="col-md-5 p-3 pt-5 p-lg-5 pt-lg-3 my-profile__image">
-        <p>image</p>
-    </div>
     <div class="col-md-7 p-3 p-lg-5 pt-lg-3 form-custom my-profile__form">
+
+        <h4 class="text-dark fw-bolder fs-5 mt-5">My details</h4>
         <form action="{% url 'profile' %}" method="POST">
             {% csrf_token %}
             {{ form|crispy }}
             <button>Update profile</button>
         </form>
-        <p><a href="" class="fw-bolder deactivate-account">Deactive account?</a></p>
+
+        <div class="account-settings">
+            <h4 class="text-dark fw-bolder fs-5 mt-5">Settings</h4>
+            <p><a href="{% url 'account_change_password' %}">Change Password</a></p>
+            <p><a href="">Deactive account</a></p>
+        </div>
+    </div>
+    <div class="col-md-5 p-3 pt-5 p-lg-5 pt-lg-3 my-profile__image">
+        <p>image</p>
+    </div>
     </div>
 </div>
